Autheticate User with service con ected to the node.js API. Get access to app with token, if User has not token AuthGuard in place to route user back to login page.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<div class="container">
+<nav class="navbar navbar-expand navbar-dark bg-dark px-3" *ngIf="user">
+  <div class="navbar-nav">
+      <a class="nav-item nav-link" routerLink="/" routerLinkActive="active">Todo App</a>
+      <button class="btn btn-link nav-item nav-link" (click)="logout()">Logout</button>
+  </div>
+</nav>
+<div class="container-md">
   <router-outlet></router-outlet>
 </div>
